# mrld

./: .gitignore  .rust-toolchain.toml  Cargo.toml  README.md  mrld-kernel.json  mrld-kernel.ld  start-network.sh  trampoline.ld
.cargo/: config.toml
boot/: Cargo.toml  README.md
boot/src/: bup.rs  main.rs  pxe.rs  smp.rs  x86.rs
kernel/: Cargo.toml  README.md  build.rs
kernel/src/: acpi.rs  apic.rs  interrupt.rs  macros.rs  main.rs  mm.rs  paging.rs  panic.rs  physmem.rs  serial.rs  smp.rs  start.rs  tls.rs  trampoline.S  trampoline.rs  util.rs  x86.rs
kernel/src/acpi/: mmio.rs
mrld/: Cargo.toml
mrld/src/: lib.rs  mmio.rs  paging.rs  physmem.rs  x86.rs
mrld/src/x86/: apic.rs  cr.rs  dtr.rs  gdt.rs  gpr.rs  idt.rs  io.rs  msr.rs  mtrr.rs  segment.rs
xtask/: Cargo.toml
xtask/src/: main.rs  pxe.rs
