[package]
name = "mrld-boot"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
acpi = "5.2.0"
elf = { version = "0.7.4", default-features = false, features = [] }
log = "0.4.27"
spin = "0.10.0"

uefi = { version = "0.36.1", features = ["panic_handler", "global_allocator", "logger"] }
mrld = { path = "../mrld" }
